--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,13 +14,13 @@ logging.level.root=INFO
 
 jwt.secret=decisivevoice
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.mail.host=smtp.yandex.ru
-spring.mail.username=uw@dru.su
-spring.mail.password=12345678
-spring.mail.port=465
-spring.mail.protocol=smtps
-mail.debug=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#
+#spring.mail.host=smtp.yandex.ru
+#spring.mail.username=uw@dru.su
+#spring.mail.password=12345678
+#spring.mail.port=465
+#spring.mail.protocol=smtps
+#mail.debug=true
 
 
